--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,13 @@
     </modules>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <github.global.server>github</github.global.server>
 
         <!--        <maven.test.skip>true</maven.test.skip>-->
 
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <!-- версии библиотек -->
+        <com.nanolaba.wicket-framework.version>0.0.6</com.nanolaba.wicket-framework.version>
 
         <!-- Maven plugins -->
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -30,13 +31,19 @@
 
     </properties>
 
+
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
     <developers>
         <developer>
             <email>alexander@andriishin.com</email>
             <name>Alexander Andriishin</name>
         </developer>
     </developers>
-
     <repositories>
         <repository>
             <id>nanolaba-mvn-repo</id>
@@ -94,6 +101,31 @@
         </resources>
 
         <plugins>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.groupId} ${project.artifactId} ${project.version}</message>
+                    <noJekyll>true</noJekyll>
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                    <branch>refs/heads/master</branch>
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                    <repositoryName>mvn-repo</repositoryName>
+                    <repositoryOwner>nanolaba</repositoryOwner>
+                    <merge>true</merge>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
