--- a/war/pom.xml
+++ b/war/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>war</artifactId>
     <name>war</name>
-    <version>1.0.0</version>
+    <version>${com.nanolaba.wicket-framework.version}</version>
     <packaging>war</packaging>
 
     <parent>
@@ -18,10 +18,9 @@
         <dependency>
             <groupId>com.nanolaba.wicket-framework</groupId>
             <artifactId>core</artifactId>
-            <version>[0.0.1,)</version>
+            <version>${com.nanolaba.wicket-framework.version}</version>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
